Fixed z-index issue with headertext

--- a/src/Styles/partials/_header.scss
+++ b/src/Styles/partials/_header.scss
@@ -109,6 +109,7 @@
   flex-wrap: wrap;
   width: 500px;
   line-height: 100px;
+  z-index: 10;
   h1,
   h2 {
     width: 500px;
